# day0-boot-sim

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  exercise_idea.md
.github/workflows/: ci.yml
bootfiles/bootstrap/: basic.json
bootfiles/configs/: edge-lab-01.json
bootfiles/tftp/: README.txt
docs/: engineering-notes.md  failure-modes.md  review-questions.md  runbook.md  study-guide.md
docs/adr/: ADR-001-synthetic-dhcp-metadata-service.md  ADR-002-windows-first-powershell-entrypoint.md  ADR-003-sqlite-for-device-state-and-timeline.md  ADR-004-synthetic-pcap-sidecar.md
scripts/: Invoke-Demo.ps1  Start-Lab.ps1  Stop-Lab.ps1  _Common.ps1
src/day0_boot_sim/: __init__.py  __main__.py  api.py  cli.py  dhcp_service.py  exceptions.py  gateway.py  logging_utils.py  models.py  orchestrator.py  pcap_sidecar.py  settings.py  storage.py  tftp_server.py
tests/: test_boot_flow.py
